--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -74,6 +74,7 @@
 /extensions/debank                                   @Yukaii
 /extensions/deepcast                                 @mooxl @mooxl
 /extensions/defichain-dobby                          @adrian-schnell
+/extensions/defiscan                                 @adrian-schnell
 /extensions/designer-news                            @itsnwa
 /extensions/devdocs                                  @pomdtr
 /extensions/dex-screener                             @wp-lai
