--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -197,6 +197,7 @@
 /extensions/netease-music                            @chyroc
 /extensions/netlify                                  @Destiner
 /extensions/nextcloud                                @uetchy
+/extensions/nextjs-docs                              @PrasadChinwal
 /extensions/node-js-evaluate                         @selfish
 /extensions/nos-news                                 @Joran-Dob
 /extensions/notion                                   @HenriChabrand
