--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -260,7 +260,7 @@
 /extensions/script-commands                          @unnamedd
 /extensions/script-kit                               @pomdtr
 /extensions/search-composer-packagist                @danyelkeddah
-/extensions/search-mdn                               @krzysztofzuraw
+/extensions/search-mdn                               @krzysztofzuraw @OBQun
 /extensions/search-notion                            @sadanand-singh
 /extensions/search-npm                               @mrmartineau
 /extensions/search-rubygems                          @aleks
