--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -186,6 +186,7 @@
 /extensions/lorem-ipsum                              @AntonNiklasson
 /extensions/macupdater                               @karlsander
 /extensions/markdown-reference                       @codedbyjordan
+/extensions/material-icons                           @creasty
 /extensions/microsoft-edge                           @KartikKumarSahoo @bromanko
 /extensions/mlb-scores                               @jso8910
 /extensions/mldocs                                   @sadanand-singh
