--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -232,6 +232,7 @@
 /extensions/producthunt                              @ragnorc
 /extensions/qr-code-scanner                          @StevenRCE0
 /extensions/qrcode-generator                         @Melvynx
+/extensions/quick-access                             @CheatGZ
 /extensions/quick-event                              @mblode
 /extensions/quick-open-project                       @zerowidth
 /extensions/quick-search                             @iwfan
