--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -20,6 +20,7 @@
 /extensions/bear                                     @hmarr @ron-myers
 /extensions/betterdiscord-search                     @TheCommieAxolotl
 /extensions/biaodian                                 @gasolin
+/extensions/bible                                    @josmithua
 /extensions/binance                                  @grzegorzkrukowski
 /extensions/bing-wallpaper                           @CheatGZ
 /extensions/bitbucket                                @Lp-Francois @esarmstrong
