--- a/extensions/todoist/package.json
+++ b/extensions/todoist/package.json
@@ -117,15 +117,17 @@
   ],
   "dependencies": {
     "@doist/todoist-api-typescript": "^1.5.0",
-    "@raycast/api": "^1.32.0",
+    "@raycast/api": "^1.33.2",
     "date-fns": "^2.28.0",
     "lodash": "^4.17.21",
+    "remove-markdown": "^0.3.0",
     "swr": "^1.2.1"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.178",
     "@types/node": "^16.11.12",
     "@types/react": "^17.0.37",
+    "@types/remove-markdown": "^0.3.1",
     "@typescript-eslint/eslint-plugin": "^5.6.0",
     "@typescript-eslint/parser": "^5.6.0",
     "eslint": "^8.4.1",
