Update Easy New File Extension (#1473)
* Update Easy New File Extension

- Clean up redundant code
- Modify shortcut keys for certain actions

* Add Edit Template With actions

* Clean useless code

* Update Open With action

* Update new-file-here.tsx

Co-authored-by: Per Nielsen Tikær <per@raycast.com>

--- a/extensions/easy-new-file/package.json
+++ b/extensions/easy-new-file/package.json
@@ -31,7 +31,7 @@
         {
           "name": "show_document",
           "type": "checkbox",
-          "required": true,
+          "required": false,
           "title": "Show File Template",
           "description": "Show file templates for document types.",
           "default": true,
@@ -40,7 +40,7 @@
         {
           "name": "show_code",
           "type": "checkbox",
-          "required": true,
+          "required": false,
           "description": "Show file templates for code types.",
           "default": true,
           "label": "Code"
@@ -48,7 +48,7 @@
         {
           "name": "show_script",
           "type": "checkbox",
-          "required": true,
+          "required": false,
           "description": "Show file templates for script types.",
           "default": true,
           "label": "Script"
