--- a/extensions/raycast-wallpaper/package.json
+++ b/extensions/raycast-wallpaper/package.json
@@ -45,15 +45,26 @@
       ],
       "required": false,
       "default": "current"
+    },
+    {
+      "name": "picturesDirectory",
+      "title": "Pictures Directory",
+      "description": "The directory of pictures to save. Path format: /Users/Username/Downloads or ~/Downloads.",
+      "type": "textfield",
+      "required": false,
+      "placeholder": "~/Downloads",
+      "default": "~/Downloads"
     }
   ],
   "dependencies": {
     "@raycast/api": "^1.33.1",
     "file-url": "^4.0.0",
+    "fs-extra": "^10.0.1",
     "node-fetch": "^3.2.3",
     "run-applescript": "^6.0.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "~16.10.0",
     "@types/react": "^17.0.28",
     "@types/shelljs": "^0.8.11",
