--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -152,6 +152,7 @@
 /extensions/iconify                                  @Destiner
 /extensions/imdb                                     @ryan-exe
 /extensions/inertiajs-documentation                  @danyelkeddah
+/extensions/iptv                                     @Aayush9029
 /extensions/itch-io                                  @Aayush9029
 /extensions/jetbrains                                @gdsmith @gdsmith
 /extensions/jira-search                              @svenwiegand
