--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -283,6 +283,7 @@
 /extensions/slack                                    @momme-rtf
 /extensions/slack-status                             @PitNikola
 /extensions/snake                                    @tonka3000
+/extensions/social-network-trends                    @CheatGZ
 /extensions/solana-explorer                          @TrGiLong
 /extensions/sourcegraph                              @bobheadxi
 /extensions/spatie-documentation                     @danyelkeddah
