--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -214,6 +214,7 @@
 /extensions/obsidian                                 @marcjulianschwarz
 /extensions/office-quotes                            @braydoncoyer @sandypockets
 /extensions/ones                                     @k8scat
+/extensions/open-in-json-hero                        @ericallam
 /extensions/open-with-app                            @fturcheti
 /extensions/opsgenie                                 @ricoberger
 /extensions/parcel-tracker                           @jjhok
