--- a/extensions/capture-raycast-metadata/package.json
+++ b/extensions/capture-raycast-metadata/package.json
@@ -24,7 +24,7 @@
       "title": "Screenshot Name",
       "description": "Set the screenshot name.",
       "type": "textfield",
-      "required": true,
+      "required": false,
       "default": "Metadata"
     },
     {
@@ -50,15 +50,26 @@
           "value": "tiff"
         }
       ],
-      "required": true,
+      "required": false,
       "default": "png"
+    },
+    {
+      "name": "screenshotsDirectory",
+      "title": "Screenshots Directory",
+      "description": "The directory of screenshots to save. Path format: /Users/Username/Downloads or ~/Downloads.",
+      "type": "textfield",
+      "required": false,
+      "placeholder": "~/Downloads",
+      "default": "~/Downloads"
     }
   ],
   "dependencies": {
     "@raycast/api": "^1.33.1",
+    "fs-extra": "^10.0.1",
     "run-applescript": "^6.0.0"
   },
   "devDependencies": {
+    "@types/fs-extra": "^9.0.13",
     "@types/node": "~16.10.0",
     "@types/react": "^17.0.28",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
