--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -318,6 +318,7 @@
 /extensions/trello                                   @ChrisChinchilla
 /extensions/tunnelblick                              @SamuelNitsche
 /extensions/tuple                                    @inxilpro
+/extensions/tw-colorsearch                           @magicjaqk
 /extensions/twitch                                   @dieserRobin
 /extensions/twitter                                  @tonka3000
 /extensions/twitter-trendscast                       @pradeepb28
