--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -58,6 +58,7 @@
 /extensions/coingecko                                @Destiner @mike182uk
 /extensions/coinmarketcap-crypto-crawler             @moojing
 /extensions/commitlint                               @lardissone
+/extensions/common-directory                         @CheatGZ
 /extensions/confluence-search                        @daviddkkim
 /extensions/connect-to-vpn                           @sato11
 /extensions/consoledev                               @Rawnly
