--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -132,6 +132,7 @@
 /extensions/google-chrome-profiles                   @frouo
 /extensions/google-cloud-platform-search             @klaa97
 /extensions/google-maps-search                       @ratoru
+/extensions/google-maven-repository                  @CheatGZ
 /extensions/google-meet                              @vitoorgomes
 /extensions/google-search                            @mblode
 /extensions/google-translate                         @gebeto @FezVrasta
