--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -260,6 +260,7 @@
 /extensions/readwise                                 @natterstefan
 /extensions/rebrandly                                @grikomsn
 /extensions/reddit-search                            @ewlcheng
+/extensions/redmine                                  @jwickers
 /extensions/refresh-wifi                             @natterstefan
 /extensions/remember-the-date                        @pernielsentikaer
 /extensions/remove-background                        @maantje @FezVrasta
