--- a/extensions/xcode/package.json
+++ b/extensions/xcode/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "xcode",
   "title": "Xcode",
-  "version": "1.3.1",
+  "version": "1.4.0",
   "author": "SvenTiigi",
   "contributors": [
     "qeude"
@@ -110,6 +110,10 @@
       "mode": "no-view"
     }
   ],
+  "categories": [
+    "Developer Tools",
+    "Applications"
+  ],
   "keywords": [
     "Xcode",
     "Simulator",
@@ -120,7 +124,7 @@
     "Apple Developer"
   ],
   "dependencies": {
-    "@raycast/api": "^1.26.3",
+    "@raycast/api": "^1.33.2",
     "dedent": "^0.7.0",
     "node-fetch": "^3.0.0",
     "rxjs": "^7.4.0",
@@ -141,6 +145,8 @@
   },
   "scripts": {
     "build": "ray build -e dist",
-    "dev": "ray develop"
+    "dev": "ray develop",
+    "fix-lint": "ray lint --fix",
+    "lint": "ray lint"
   }
 }
