--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -196,6 +196,7 @@
 /extensions/lorem-ipsum                              @AntonNiklasson
 /extensions/macupdater                               @karlsander
 /extensions/markdown-reference                       @codedbyjordan
+/extensions/masscode-assistant                       @antonreshetov
 /extensions/material-icons                           @creasty
 /extensions/microsoft-edge                           @KartikKumarSahoo @bromanko
 /extensions/mlb-scores                               @jso8910
