--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -57,6 +57,7 @@
 /extensions/coinbase-pro                             @farisaziz12
 /extensions/coingecko                                @Destiner @mike182uk
 /extensions/coinmarketcap-crypto-crawler             @moojing
+/extensions/color-casket                             @slavarazum
 /extensions/commitlint                               @lardissone
 /extensions/common-directory                         @koinzhang
 /extensions/confluence-search                        @daviddkkim
