--- a/extensions/quick-access/package.json
+++ b/extensions/quick-access/package.json
@@ -29,8 +29,34 @@
           "required": false,
           "title": "Advanced Preference",
           "label": "Auto Copy Latest File",
-          "description": "Automatically copy the latest files in the topmost directory.",
+          "description": "Automatically copy the latest files in the topmost directory. There will be some delay when copying files.",
           "default": false
+        },
+        {
+          "name": "rememberTag",
+          "type": "checkbox",
+          "required": false,
+          "label": "Remember Filter Tag",
+          "description": "Remember Gist Filter Tag.",
+          "default": true
+        },
+        {
+          "name": "primaryAction",
+          "type": "dropdown",
+          "description": "Set the primary action in Search Pinned Directories command.",
+          "required": false,
+          "title": "Primary action",
+          "default": "Copy",
+          "data": [
+            {
+              "title": "Copy",
+              "value": "Copy"
+            },
+            {
+              "title": "Open",
+              "value": "Open"
+            }
+          ]
         },
         {
           "name": "fileShowNumber",
@@ -51,10 +77,6 @@
             {
               "title": "5",
               "value": "5"
-            },
-            {
-              "title": "8",
-              "value": "8"
             },
             {
               "title": "10",
@@ -94,7 +116,8 @@
   "dependencies": {
     "@raycast/api": "^1.33.1",
     "fs-extra": "^10.0.1",
-    "run-applescript": "^6.0.0"
+    "run-applescript": "^6.0.0",
+    "file-url": "^4.0.0"
   },
   "devDependencies": {
     "@types/fs-extra": "^9.0.13",
