--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -242,6 +242,7 @@
 /extensions/premier-league                           @anhthang
 /extensions/productboard                             @honzatmn
 /extensions/producthunt                              @ragnorc
+/extensions/px-to-rem-converter                      @raulanatol
 /extensions/qr-code-scanner                          @StevenRCE0
 /extensions/qrcode-generator                         @Melvynx
 /extensions/quick-access                             @koinzhang
