--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -243,6 +243,7 @@
 /extensions/productboard                             @honzatmn
 /extensions/producthunt                              @ragnorc
 /extensions/px-to-rem-converter                      @raulanatol
+/extensions/qq-music-controls                        @jwickers
 /extensions/qr-code-scanner                          @StevenRCE0
 /extensions/qrcode-generator                         @Melvynx
 /extensions/quick-access                             @koinzhang
