--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -313,6 +313,7 @@
 /extensions/tailwindcss                              @vimtor
 /extensions/temporary-email                          @natterstefan
 /extensions/terminalfinder                           @yedongze
+/extensions/text-shortcuts                           @koinzhang
 /extensions/things                                   @loris
 /extensions/ticktick                                 @viduycheung
 /extensions/timeular                                 @kudrykv
