Text Shortcut: fix extension icon (#1508)

--- a/extensions/text-shortcuts/package.json
+++ b/extensions/text-shortcuts/package.json
@@ -13,7 +13,7 @@
   "commands": [
     {
       "name": "shortcut-library",
-      "icon": "search-icon.png",
+      "icon": "shortcut-library.png",
       "title": "Shortcut Library",
       "subtitle": "Text Shortcuts",
       "description": "Search and run text shortcut.",
