--- a/extensions/homeassistant/package.json
+++ b/extensions/homeassistant/package.json
@@ -83,7 +83,7 @@
     },
     {
       "name": "attributes",
-      "title": "All Entities with Attributes",
+      "title": "All Entities With Attributes",
       "subtitle": "Home Assistant",
       "description": "Query Home Assistant entity attributes",
       "mode": "view"
@@ -157,6 +157,13 @@
       "subtitle": "Home Assistant",
       "description": "Get/Set states of Home Assistant Entity Updates",
       "mode": "view"
+    },
+    {
+      "name": "doors",
+      "title": "Doors",
+      "subtitle": "Home Assistant",
+      "description": "Get/Set states of Home Assistant Entity with device class door",
+      "mode": "view"
     }
   ],
   "preferences": [
@@ -209,7 +216,7 @@
     "Other"
   ],
   "dependencies": {
-    "@raycast/api": "^1.32.0",
+    "@raycast/api": "^1.33.0",
     "home-assistant-js-websocket": "^5.11.1",
     "node-fetch": "^2.6.1",
     "open": "^8.3.0",
