--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -201,6 +201,7 @@
 /extensions/markdown-reference                       @codedbyjordan
 /extensions/masscode-assistant                       @antonreshetov
 /extensions/material-icons                           @creasty
+/extensions/mempool                                  @dillionverma
 /extensions/microsoft-edge                           @KartikKumarSahoo @bromanko
 /extensions/mlb-scores                               @jso8910
 /extensions/mldocs                                   @sadanand-singh
