--- a/extensions/google-drive/package.json
+++ b/extensions/google-drive/package.json
@@ -2,7 +2,7 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "google-drive",
   "title": "Google Drive",
-  "description": "Search files in the mounted Google Drive",
+  "description": "Fuzzy search files in the mounted Google Drive",
   "icon": "command-icon.png",
   "author": "vishaltelangre",
   "categories": [
@@ -15,7 +15,7 @@
       "name": "index",
       "title": "File Search",
       "subtitle": "Google Drive",
-      "description": "Search files in your locally mounted Google Drive folder",
+      "description": "Fuzzy search files in your locally mounted Google Drive folder",
       "mode": "view"
     }
   ],
@@ -39,18 +39,21 @@
     }
   ],
   "dependencies": {
-    "@raycast/api": "^1.33.2"
+    "@raycast/api": "^1.33.2",
+    "fzf": "^0.5.1",
+    "sql.js": "^1.6.2"
   },
   "devDependencies": {
     "@types/node": "~16.10.0",
     "@types/react": "^17.0.28",
+    "@types/sql.js": "^1.4.3",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "fuzzysort": "^1.2.1",
     "prettier": "^2.5.1",
-    "typescript": "^4.4.3"
+    "typescript": "^4.4.3",
+    "use-debounce": "^7.0.1"
   },
   "scripts": {
     "build": "ray build -e dist",
