--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -303,7 +303,7 @@
 /extensions/spatie-documentation                     @danyelkeddah
 /extensions/speedtest                                @tonka3000
 /extensions/spotify-controls                         @thomaspaulmann @altrdev @ron-myers @sandypockets
-/extensions/spotify-player                           @mattisssa
+/extensions/spotify-player                           @mattisssa @dillionverma
 /extensions/ssh-manager                              @scopsy
 /extensions/stackoverflow                            @sadanand-singh
 /extensions/stripe                                   @pradeepb28
