--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -232,6 +232,7 @@
 /extensions/password-generator                       @joshuaiz
 /extensions/paste-without-formatting                 @koinzhang
 /extensions/pestphp-documentation                    @danyelkeddah
+/extensions/pexels                                   @koinzhang
 /extensions/phpmon                                   @nicoverbruggen
 /extensions/pinboard                                 @fe9lix
 /extensions/pipe-commands                            @pomdtr @gasolin
