Added filter preferences to Google Drive (#1541)
* Added preferences

* Added getExcludePaths

* Added reindex file action at file not found

* Changed to use show directories flag at save index

* Filtered exlucde paths file

* Update extensions/google-drive/src/utils.ts

Co-authored-by: Vishal Telangre <vishaltelangre@gmail.com>

* Added ReindexFileCacheAction and ClearFilePreviewsCacheAction

* Wrote CHANGELOG

* Removed clearFilePreviewsCache from action props

* Added nametake is contributor

Co-authored-by: Vishal Telangre <vishaltelangre@gmail.com>
Co-authored-by: Per Nielsen Tikær <per@raycast.com>

--- a/extensions/google-drive/package.json
+++ b/extensions/google-drive/package.json
@@ -9,6 +9,7 @@
     "Developer Tools",
     "Productivity"
   ],
+  "contributors": ["nametake"],
   "license": "MIT",
   "commands": [
     {
@@ -35,6 +36,23 @@
       "type": "checkbox",
       "default": false,
       "label": "Show hidden files",
+      "required": false
+    },
+    {
+      "name": "shouldShowDirectories",
+      "description": "Show directories in the search results",
+      "type": "checkbox",
+      "default": false,
+      "label": "Show directories",
+      "required": false
+    },
+    {
+      "name": "excludePaths",
+      "title": "Exclude Paths",
+      "description": "Comma-separated full paths to exclude from search",
+      "type": "textfield",
+      "default": "",
+      "placeholder": "e.g. ~/Google Drive/My Drive/Share, ...",
       "required": false
     }
   ],
