--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -310,6 +310,7 @@
 /extensions/ssh-manager                              @scopsy
 /extensions/stackoverflow                            @sadanand-singh
 /extensions/stripe                                   @pradeepb28
+/extensions/supabase-docs                            @Isaiah-Hamilton
 /extensions/surge                                    @ysj151215
 /extensions/swift-evolution                          @BProg
 /extensions/switchhosts                              @tiancheng92
