--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -336,7 +336,7 @@
 /extensions/tunnelblick                              @SamuelNitsche
 /extensions/tuple                                    @inxilpro
 /extensions/tw-colorsearch                           @magicjaqk
-/extensions/twitch                                   @dieserRobin
+/extensions/twitch                                   @dieserRobin @suth @pernielsentikaer
 /extensions/twitter                                  @tonka3000
 /extensions/twitter-trendscast                       @pradeepb28
 /extensions/two-factor-authentication-code-generator @cjdenio
