--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -220,7 +220,7 @@
 /extensions/node-js-evaluate                         @selfish
 /extensions/nos-news                                 @Joran-Dob
 /extensions/noteplan-3                               @shakedlokits
-/extensions/notion                                   @HenriChabrand
+/extensions/notion                                   @HenriChabrand @mathieudutour
 /extensions/nsis-reference                           @idleberg
 /extensions/obsidian                                 @marcjulianschwarz
 /extensions/office-quotes                            @braydoncoyer @sandypockets
