[homeassistant] dynamic temperature options (#1538)
* [homeassistant] dynamic temperature options
- base temperature options on climate entity attributes, instead of hardcoding them

* Updated changelog

Co-authored-by: Per Nielsen Tikær <per@raycast.com>

--- a/extensions/homeassistant/package.json
+++ b/extensions/homeassistant/package.json
@@ -218,12 +218,14 @@
   "dependencies": {
     "@raycast/api": "^1.33.0",
     "home-assistant-js-websocket": "^5.11.1",
+    "lodash-es": "^4.17.21",
     "node-fetch": "^2.6.1",
     "open": "^8.3.0",
     "url-join": "^4.0.1",
     "ws": "^8.2.3"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^16.4.3",
     "@types/node-fetch": "^2.5.12",
     "@types/react": "^17.0.15",
