--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -95,6 +95,7 @@
 /extensions/dot-new                                  @natterstefan
 /extensions/dribbble                                 @gebeto
 /extensions/dropbox                                  @chyroc
+/extensions/eagle                                    @Yukaii
 /extensions/easy-new-file                            @koinzhang
 /extensions/element                                  @Aayush9029
 /extensions/elgato-key-light                         @thomaspaulmann
