--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -153,6 +153,7 @@
 /extensions/hexlify                                  @gkpln3
 /extensions/hidden-icons                             @koinzhang
 /extensions/hide-mail                                @Flatroy
+/extensions/holodex                                  @uetchy
 /extensions/homeassistant                            @tonka3000 @altrdev
 /extensions/how-long-to-beat                         @Cronos87
 /extensions/http-status-codes                        @AlexVanderbist
