--- a/extensions/hellonext-changelogs/package.json
+++ b/extensions/hellonext-changelogs/package.json
@@ -32,8 +32,7 @@
   ],
   "dependencies": {
     "@raycast/api": "^1.33.2",
-    "axios": "^0.24.0",
-    "turndown": "^7.1.1"
+    "axios": "^0.24.0"
   },
   "devDependencies": {
     "@types/node": "~16.10.0",
