Adding support for 1Password 8 (#1518)
* 1Password: Extract CLI info to separate file

* 1Password: Add preference to toggle between 1Password 7 and 8

* 1Password: Make support for version 7 and 8 simpler

* 1Password: Migrate to API v1.30

* 1Password: Remove unnecessary dependency

* 1Password: Add changelog entry

* 1Password: Improve error messages

* Use 1Password 8 when both metadata locations exist

* Avoiding duplicate key warning

This is actually an issue in opbookmarks as the CLI doesn't export the category UUID. While we could hardcode things that will be problematic for new item types.

* Updating command title to reflect all item types

* Removing version specificity from the description

We need to change the folder name and the name+title as well. Some of this can only be done on the Raycast side.

* Updating contributors

* Updating 1Password 8 url schemes

* Updated screenshots

* Updating install instructions

* Updating package description & subtitle

* Chore: Corrected format

* Update package.json

* Various small updates

* Corrected metadata

* Update CHANGELOG.md

Co-authored-by: Thomas Paul Mann <hello@thomaspaulmann.com>
Co-authored-by: Per Nielsen Tikær <per@raycast.com>

--- a/extensions/1password7/package.json
+++ b/extensions/1password7/package.json
@@ -2,11 +2,12 @@
   "$schema": "https://www.raycast.com/schemas/extension.json",
   "name": "1password7",
   "title": "1Password 7",
-  "description": "Search, open or edit your 1Password 7 passwords from Raycast",
+  "description": "Search, open or edit your 1Password passwords from Raycast",
   "icon": "1password-icon.png",
   "author": "khasbilegt",
   "contributors": [
-    "thomas"
+    "thomas",
+    "dteare"
   ],
   "license": "MIT",
   "commands": [
@@ -14,7 +15,7 @@
       "name": "list",
       "title": "My Passwords",
       "subtitle": "1Password",
-      "description": "List of all your 1Password 7 passwords in Raycast",
+      "description": "List of all your 1Password items. Then open in your default browser, view items in 1Password, or open items in 1Password for editing.",
       "mode": "view",
       "keywords": [
         "1p",
@@ -24,9 +25,32 @@
       ]
     }
   ],
+  "preferences": [
+    {
+      "name": "appVersion",
+      "type": "dropdown",
+      "title": "1Password App Version",
+      "description": "Select the version of the 1Password app you want to use",
+      "data": [
+        {
+          "title": "Automatic (Default)",
+          "value": "automatic"
+        },
+        {
+          "title": "1Password 8",
+          "value": "onepassword8"
+        },
+        {
+          "title": "1Password 7",
+          "value": "onepassword7"
+        }
+      ],
+      "default": "automatic",
+      "required": false
+    }
+  ],
   "dependencies": {
-    "@raycast/api": "^1.25.0",
-    "open": "^8.3.0",
+    "@raycast/api": "^1.33.0",
     "sha.js": "^2.4.11"
   },
   "devDependencies": {
@@ -42,6 +66,8 @@
   },
   "scripts": {
     "build": "ray build -e dist",
-    "dev": "ray develop"
+    "dev": "ray develop",
+    "fix-lint": "ray lint --fix",
+    "lint": "ray lint"
   }
 }
