--- a/.github/workflows/notify-contributors.yml
+++ b/.github/workflows/notify-contributors.yml
@@ -7,6 +7,7 @@ on:
 
 jobs:
   notify-contributors-on-pr:
+    if: github.repository == 'raycast/extensions'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
