--- a/.github/workflows/sync-docs.yml
+++ b/.github/workflows/sync-docs.yml
@@ -7,6 +7,7 @@ on:
   workflow_dispatch:
 jobs:
   sync-api-docs:
+    if: github.repository == 'raycast/extensions'
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
