--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -116,6 +116,7 @@
 /extensions/flutter-pub-dev-search                   @prasadsunny1
 /extensions/fork-repositories                        @sxn
 /extensions/format-graphql                           @tngranados
+/extensions/frankerfacez                             @davidchalifoux
 /extensions/geohash-encode-decode                    @alrico88
 /extensions/gif-search                               @josephschmitt
 /extensions/git-repos                                @moored
