--- a/extensions/1password/package.json
+++ b/extensions/1password/package.json
@@ -1,13 +1,14 @@
 {
   "$schema": "https://www.raycast.com/schemas/extension.json",
-  "name": "1password7",
-  "title": "1Password 7",
+  "name": "1password",
+  "title": "1Password",
   "description": "Search, open or edit your 1Password passwords from Raycast",
   "icon": "1password-icon.png",
   "author": "khasbilegt",
   "contributors": [
     "thomas",
-    "dteare"
+    "dteare",
+    "pernielsentikaer"
   ],
   "license": "MIT",
   "commands": [
