--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,7 +1,7 @@
 # This file is generated. Do not modify directly.
 
 /extensions/1loc                                     @kud @sxn
-/extensions/1password7                               @khasbilegt @thomaspaulmann @dteare
+/extensions/1password                                @khasbilegt @thomaspaulmann @dteare @pernielsentikaer
 /extensions/8ball                                    @Gitsack
 /extensions/airport                                  @siddharthsharma94
 /extensions/algolia                                  @valentindotxyz
