--- a/.github/workflows/notify-contributors.yml
+++ b/.github/workflows/notify-contributors.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Node.js
         uses: raycast/github-actions/setup-node@master
 
-      - name: Get changed files in the docs folder
+      - name: Get changed files
         id: changed-files
         uses: Ana06/get-changed-files@v2.1.0
         with:
